<resources>
    <string name="app_name">Language Learner</string>
    <string name="add_phrases_button_Text">Add Phrases</string>
    <string name="display_phrases_button_Text">Display Phrases</string>
    <string name="edit_phrases_button_Text">Edit Phrases</string>
    <string name="language_subscription_button_Text">Subscription</string>
    <string name="translate_button_Text">Translate</string>
    <string name="enter_phrase">Enter a word or a Phrase</string>
    <string name="save_phrase_text">Save</string>
    <string name="helpMessageTextview">We encourage you to learn a new phrase or word in a new language daily. Start by saving what you want to learn!</string>
    <string name="success_message">Congratulations! You have successfully added a new phrase. Hope you learn it in a different language.</string>
    <string name="error_message">You have already saved that phase. Try learning a new one!</string>
    <string name="fields_empty_error">Enter a word or a phrase you want to learn</string>
    <string name="translate_all">Translate All</string>
    <string name="text_speech_apikey">a94S_aj3bbgeYnr_IqVAsyTJh7J83jGjEOahIbAruaLc</string>
    <string name="text_speech_url">https://api.us-south.text-to-speech.watson.cloud.ibm.com/instances/77087439-511c-4a10-b455-d86bdf66b27f</string>
    <string name="save_a_new_word_daily">Save a new word daily!</string>
    <string name="add_phrase_group_image">add phrase group image</string>
    <string name="search_word_or_phrase">Search word or phrase</string>
    <string name="logo_image">logo_image</string>
    <string name="logo_name">logo_name</string>
    <string name="profile_image">profile_image</string>
    <string name="profile_information">Profile Information</string>
    <string name="email">Email</string>
    <string name="email_address">email address</string>
    <string name="password">Password</string>
    <string name="password_displayed">**********</string>
    <string name="my_stats">My Stats</string>
    <string name="subscribed_languages">Subscribed Languages</string>
    <string name="quit">Quit</string>
    <string name="total_translations">Total Translations</string>
    <string name="translation_title_image">translation_title_image</string>
    <string name="your_translations">Your Translations</string>
</resources>
