<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF6F3"
    tools:context=".Ui_Presenters.AddPhraseActivity">

    <TextView
        android:id="@+id/displayPageTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#5a6174"
        android:fontFamily="@font/domine"
        android:gravity="center"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:text="@string/save_a_new_word_daily"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phraseEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="Enter Phrase"
        android:ems="10"
        android:fontFamily="@font/domine"
        android:hint="@string/enter_phrase"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/phraseSaveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/phraseSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/generic_button"
        android:fontFamily="@font/domine"
        android:text="@string/save_phrase_text"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/helpDescriptionTextview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/domine"
        android:lineSpacingExtra="28sp"
        android:text="@string/helpMessageTextview"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/phraseEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayPageTitleTextView"
        app:layout_constraintVertical_bias="0.511" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:contentDescription="@string/add_phrase_group_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/language_people_2" />

</androidx.constraintlayout.widget.ConstraintLayout>